--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,10 +16,7 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "ES2019.Array", "dom"]
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
