--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@ngxs/store": "^3.6.2",
     "@swimlane/ngx-charts": "^14.0.0",
     "immutable": "^4.0.0-rc.12",
     "rxjs": "~6.5.5",
