--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/cli": "~10.0.5",
     "@angular/compiler-cli": "~10.0.8",
     "@ngxs/devtools-plugin": "^3.6.2",
+    "@types/d3-shape": "^1.3.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
