--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "~10.2.1",
     "@ngxs/store": "^3.7.0",
     "@swimlane/ngx-charts": "^16.0.0",
+    "immer": "^7.0.14",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
