--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Compile web app
         run: |
           npm install
-          ng build --prod
+          npm run-script build
