--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@angular/router": "~10.2.1",
     "@ngxs/store": "^3.7.0",
     "@swimlane/ngx-charts": "^16.0.0",
+    "ag-grid-angular": "^24.1.0",
+    "ag-grid-community": "^24.1.0",
     "immer": "^7.0.14",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
