--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "~10.2.1",
     "@angular/platform-browser-dynamic": "~10.2.1",
     "@angular/router": "~10.2.1",
+    "@ngxs-labs/data": "^4.1.1",
     "@ngxs/store": "^3.7.0",
     "@swimlane/ngx-charts": "^16.0.0",
     "ag-grid-angular": "^24.1.0",
@@ -39,6 +40,7 @@
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.1",
     "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/logger-plugin": "^3.7.0",
     "@types/d3-shape": "^1.3.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
