Added gzip and cache headers in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,8 +1,31 @@
 server { 
   listen 80;
   server_name mimic-predictors-ui;
+  root /usr/share/nginx/html;
+
+  gzip on;
+  gzip_disable "msie6";
+  gzip_vary on;
+  gzip_proxied any;
+  gzip_comp_level 6;
+  gzip_buffers 16 8k;
+  gzip_http_version 1.1;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_min_length 400;
+
+  location ~ /index.html|.*\.json$ {
+    expires -1;
+    add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    include /etc/nginx/security-headers.conf;
+  }
+
+  location ~ .*\.(jpg|jpeg|png|gif|ico|css|js)$ {
+    add_header Cache-Control 'max-age=31449600';
+    include /etc/nginx/security-headers.conf;
+  }
+
   location / {
-    root /usr/share/nginx/html;
     try_files $uri $uri/ /index.html;
+    include /etc/nginx/security-headers.conf;
   }
 }
