--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-ru/common": "^14.90.1",
     "@angular/animations": "~10.2.1",
     "@angular/cdk": "^10.2.7",
     "@angular/common": "~10.2.1",
@@ -25,8 +26,11 @@
     "@angular/platform-browser": "~10.2.1",
     "@angular/platform-browser-dynamic": "~10.2.1",
     "@angular/router": "~10.2.1",
+    "@ngxs-labs/data": "^4.1.1",
     "@ngxs/store": "^3.7.0",
     "@swimlane/ngx-charts": "^16.0.0",
+    "ag-grid-angular": "^24.1.0",
+    "ag-grid-community": "^24.1.0",
     "immer": "^7.0.14",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
@@ -37,6 +41,7 @@
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.1",
     "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/logger-plugin": "^3.7.0",
     "@types/d3-shape": "^1.3.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
