--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "private": true,
   "dependencies": {
     "@angular-ru/common": "^14.90.1",
-    "@angular/animations": "~11.0.4",
+    "@angular/animations": "~11.2.7",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "~11.0.5",
-    "@angular/compiler": "~10.2.1",
+    "@angular/common": "~11.2.7",
+    "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
-    "@angular/forms": "~11.0.4",
+    "@angular/forms": "~11.2.7",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~11.0.4",
-    "@angular/platform-browser-dynamic": "~10.2.1",
-    "@angular/router": "~11.0.4",
+    "@angular/platform-browser": "~11.2.7",
+    "@angular/platform-browser-dynamic": "~11.2.7",
+    "@angular/router": "~11.2.7",
     "@ngxs-labs/data": "^4.1.1",
     "@ngxs/store": "^3.7.0",
     "@swimlane/ngx-charts": "^16.0.0",
@@ -34,31 +34,31 @@
     "immer": "^7.0.14",
     "ng-zorro-antd": "^11.3.0",
     "ng-zorro-antd-mobile": "^4.0.0",
-    "rxjs": "~6.5.5",
+    "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "~10.2.0",
-    "@angular/compiler-cli": "~10.2.1",
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular/cli": "~11.2.6",
+    "@angular/compiler-cli": "~11.2.7",
     "@ngxs/devtools-plugin": "^3.7.0",
     "@ngxs/logger-plugin": "^3.7.0",
     "@types/d3-shape": "^1.3.2",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.5.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.1.5"
   }
 }
