初步完成登录和注册
登录与注册的前端完成，尚未与后端进行数据传输

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,9 @@
       "@mi/*": ["src/app/mi/*"],
       "@vancomycin/*": ["src/app/vancomycin/*"],
       "@login/*": ["src/app/login/*"],
-      "@app/*": ["src/app/*"]
+      "@register/*": ["src/app/register/*"],
+      "@app/*": ["src/app/*"],
+
     }
   },
   "angularCompilerOptions": {
