实体识别前端完成
完成实体识别前端部分，准备对接后端

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,7 @@
       "@vancomycin/*": ["src/app/vancomycin/*"],
       "@login/*": ["src/app/login/*"],
       "@register/*": ["src/app/register/*"],
+      "@ner/*": ["src/app/ner/*"],
       "@app/*": ["src/app/*"],
 
     }
