整合login至core前备份

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
       "@mi/*": ["src/app/mi/*"],
       "@vancomycin/*": ["src/app/vancomycin/*"],
       "@login/*": ["src/app/login/*"],
+      "@user/*": ["src/app/user/*"],
       "@register/*": ["src/app/register/*"],
       "@ner/*": ["src/app/ner/*"],
       "@DB/*": ["src/app/DB/*"],
